objects/CN_Preset_PriceBook_Entry__c.object
<CustomObject>
    <fields>
        <fullName>CN_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>QSR</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Discount_Price__c</fullName>
        <label>Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Is_Effected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Effected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Need_Effected__c</fullName>
        <formula>CN_Effective_Date__c  =   TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Need Effected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Max_Discount_Price__c</fullName>
        <label>Max Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Product_Code__c</fullName>
        <formula>CN_Product__r.CN_SKU_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Name__c</fullName>
        <formula>CN_Product__r.CN_SKU_Description_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Preset PriceBook Entrys</relationshipLabel>
        <relationshipName>Preset_PriceBook_Entrys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Standard_List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_UnitPrice__c</fullName>
        <label>Channel Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Preset PriceBook Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Channel__c</columns>
        <columns>CN_Effective_Date__c</columns>
        <columns>CN_Expiration_Date__c</columns>
        <columns>CN_Product__c</columns>
        <columns>CN_UnitPrice__c</columns>
        <columns>CN_Discount_Price__c</columns>
        <columns>CN_Max_Discount_Price__c</columns>
        <columns>CN_Standard_List_Price__c</columns>
        <columns>CN_Is_Effected__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CN_PresetPrice_Effeted</fullName>
        <columns>NAME</columns>
        <columns>CN_Channel__c</columns>
        <columns>CN_Effective_Date__c</columns>
        <columns>CN_Expiration_Date__c</columns>
        <columns>CN_Product__c</columns>
        <columns>CN_UnitPrice__c</columns>
        <columns>CN_Discount_Price__c</columns>
        <columns>CN_Max_Discount_Price__c</columns>
        <columns>CN_Standard_List_Price__c</columns>
        <columns>CN_Is_Effected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Is_Effected__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Effected Preset PriceBook Entry</label>
    </listViews>
    <listViews>
        <fullName>CN_PresetPrice_Not_Effected</fullName>
        <columns>NAME</columns>
        <columns>CN_Channel__c</columns>
        <columns>CN_Effective_Date__c</columns>
        <columns>CN_Expiration_Date__c</columns>
        <columns>CN_Product__c</columns>
        <columns>CN_UnitPrice__c</columns>
        <columns>CN_Discount_Price__c</columns>
        <columns>CN_Max_Discount_Price__c</columns>
        <columns>CN_Standard_List_Price__c</columns>
        <columns>CN_Is_Effected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Is_Effected__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Effected Preset PriceBook Entry</label>
    </listViews>
    <nameField>
        <displayFormat>PPBE-{0000000000}</displayFormat>
        <label>Preset PriceBook Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preset PriceBook Entrys</pluralLabel>
    <recordTypes>
        <fullName>CN_Preset_PriceBook_Entry</fullName>
        <active>true</active>
        <label>CN Preset PriceBook Entry</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CN_PPBE_Channel_Check_Field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(ISPICKVAL(CN_Channel__c,&apos;LP&apos;)),
  OR(
    CN_UnitPrice__c = 0,
    ISBLANK(CN_UnitPrice__c)
  )
)</errorConditionFormula>
        <errorDisplayField>CN_UnitPrice__c</errorDisplayField>
        <errorMessage>Please input Channel Price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_PPBE_Channel_Prevent_ListPrice</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(ISPICKVAL(CN_Channel__c,&apos;LP&apos;)),
  NOT(ISBLANK( CN_Standard_List_Price__c ))
)</errorConditionFormula>
        <errorDisplayField>CN_Standard_List_Price__c</errorDisplayField>
        <errorMessage>Please don&apos;t input the List Price for Channel Preset Price Book Entry</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_PPBE_Check_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  OR(ISCHANGED(CN_Effective_Date__c ),ISNEW()),
  CN_Effective_Date__c &lt;= TODAY()
)</errorConditionFormula>
        <errorDisplayField>CN_Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date must be later than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_PPBE_Check_ExpirationDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Preset_PriceBook_Entry&apos;,
  CN_Effective_Date__c &gt; CN_Expiration_Date__c
)</errorConditionFormula>
        <errorDisplayField>CN_Expiration_Date__c</errorDisplayField>
        <errorMessage>Expiration Date should be later than Effective Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_PPBE_Prevent_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  OR(CN_Is_Effected__c = TRUE, CN_Effective_Date__c &lt;= Today()),
  OR(
    ISCHANGED(CN_Channel__c),
    ISCHANGED(CN_UnitPrice__c),
    ISCHANGED(CN_Discount_Price__c),
    ISCHANGED(CN_Effective_Date__c),
    ISCHANGED(CN_Expiration_Date__c),
    ISCHANGED(CN_Standard_List_Price__c),
    ISCHANGED(CN_Max_Discount_Price__c),
    ISCHANGED(CN_Product__c)
  )
)</errorConditionFormula>
        <errorMessage>You are not allowed to edit the Preset Price Book Entry which has been effected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_PPBE_Standard_Check_Field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISPICKVAL(CN_Channel__c,&apos;LP&apos;),
  OR(
    NOT(ISBLANK(CN_Discount_Price__c )),
    NOT(ISBLANK(CN_Max_Discount_Price__c)),
    NOT(ISBLANK(CN_UnitPrice__c))
  )
)</errorConditionFormula>
        <errorMessage>Please don&apos;t input the Channel ,Discount Price and Max Discount Price for Preset Price Book Entry which channel is &apos;LP&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_PPBE_Standard_Check_ListPrice</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISPICKVAL(CN_Channel__c,&apos;LP&apos;),
  ISBLANK( CN_Standard_List_Price__c )
)</errorConditionFormula>
        <errorDisplayField>CN_Standard_List_Price__c</errorDisplayField>
        <errorMessage>Please input the list Price for Preset Price Book Entry which channel is &apos;LP&apos;</errorMessage>
    </validationRules>
</CustomObject>